# BCSM_SGX

./: .gitmodules  README.md  run.sh
core/: LOG  Makefile
core/app/: app.c  app.c.bak
core/enclave/: Cargo.toml  Enclave.edl  Makefile
core/enclave/src/: lib.rs  lib.rs.bak
enclave/src/: lib.rs
