[package]
name = "Cryptosampleenclave"
version = "0.9.8"
authors = ["Baidu"]

[lib]
name = "cryptosampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { path = "../../../sgx_types" }
sgx_tstd = { path = "../../../sgx_tstd" }
sgx_tcrypto = { path = "../../../sgx_tcrypto" }
sgx_rand = { path = "../../../sgx_rand" }

[dependencies]
sgx_rand_derive = { path = "../../../sgx_rand_derive" }
