[package]
name = "BCSMsampleenclave"
version = "0.9.8"
authors = ["Baidu"]

[lib]
name = "bcsmsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { path = "../../../sgx_types" }
sgx_tstd = { path = "../../../sgx_tstd" }
sgx_tcrypto = { path = "../../../sgx_tcrypto" }
sgx_rand = { path = "../../../sgx_rand" }
sgx_tseal = { path = "../../../sgx_tseal" }
sgx_tdh = { path = "../../../sgx_tdh" }

[dependencies]
sgx_rand_derive = { path = "../../../sgx_rand_derive" }
